# frontier-bot

./: .gitignore  README.md  build.sh  clean_build.sh  run.sh
src/turtlebot3_autonav/: CMakeLists.txt  README.md  initial_pose_pub.py  package.xml  setup.py
src/turtlebot3_autonav/config/: nav2_params.yaml  nav_view.rviz
src/turtlebot3_autonav/include/turtlebot3_autonav/: explorer_node.hpp
src/turtlebot3_autonav/launch/: bringup_sim.launch.py  nav2.launch.py  slam.launch.py
src/turtlebot3_autonav/resource/: turtlebot3_autonav
src/turtlebot3_autonav/src/: explorer_node.cpp
src/turtlebot3_autonav/turtlebot3_autonav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/turtlebot3_autonav_py/: package.xml  setup.py
src/turtlebot3_autonav_py/resource/: turtlebot3_autonav_py
src/turtlebot3_autonav_py/scripts/: __init__.py
src/turtlebot3_autonav_py/turtlebot3_autonav_py/: __init__.py  initial_pose_pub.py  initial_pose_publisher.py
src/turtlebot3_initial_pose_pub/: package.xml  setup.py
src/turtlebot3_initial_pose_pub/resource/: turtlebot3_initial_pose_pub
src/turtlebot3_initial_pose_pub/turtlebot3_initial_pose_pub/: initial_pose_pub.py
