<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_autonav_py</name>
  <version>0.1.0</version>
  <description>Python nodes for TurtleBot3 autonomous navigation (e.g., initial pose publisher).</description>
  <maintainer email="aaronk@todo.todo">aaronk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
