<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_initial_pose_pub</name>
  <version>0.1.0</version>
  <description>Standalone initial pose publisher node for TurtleBot3 simulation (ROS 2).</description>
  <maintainer email="aaronkulkarni@users.noreply.github.com">Aaron Kulkarni</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
